# starter-cpp-project

./: .gitignore  CMakeLists.txt
include/: book.h
src/: arr_and_str.cpp  book.cpp  book_main.cpp  main.cpp  pointers.cpp  struct_and_enum.cpp
test/: tester.cpp
